# WHAT-THE-WHAT

./: README.md  mongo_init.sh  pyproject.toml
src/: app_data.py  image.py  main.py  poster.py  speech_recognition.py  video_frame.py  vk_api_wrapper.py
src/core/: config.py  exceptions.py  logger.py
tests/mongodb/: fixtures.py  test_general.py
